--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,5 @@ dependencies {
 
     annotationProcessor  rootProject.ext.arouterCompiler
     implementation rootProject.ext.arouterApi
-
+    implementation 'com.google.android:flexbox:0.3.1'
 }
