--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,11 @@
             android:name=".module.shopper.ShopperAppointmentActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+      <!--美导预约-->
+        <activity
+            android:name=".module.shopper.ShopperAppointmentOrderActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
 
 
     </application>
