新增 产品详情界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,11 @@
             android:name=".module.shopper.ShopperAppointmentOrderActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+      <!--产品详情-->
+        <activity
+            android:name=".module.product.ProductDetailsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
 
 
     </application>
