--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,19 +41,24 @@
             android:name=".module.shopper.ShopperAppointmentActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-      <!--美导预约-->
+        <!--美导预约-->
         <activity
             android:name=".module.shopper.ShopperAppointmentOrderActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-      <!--产品详情-->
+        <!--产品详情-->
         <activity
             android:name=".module.product.ProductDetailsActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-      <!--我的订单-->
+        <!--我的订单-->
         <activity
             android:name=".module.order.MyOrderActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <!--用户设置-->
+        <activity
+            android:name=".module.user.UserSettingActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
