--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,8 +107,14 @@
             android:windowSoftInputMode="adjustPan" />
         <!--积分订单确认收获-->
         <activity
-            android:theme="@style/ActivityDialogStyleBottom"
             android:name=".module.order.integral.IntegralOrderSureGetActivitty"
+            android:screenOrientation="portrait"
+            android:theme="@style/ActivityDialogStyleBottom"
+            android:windowSoftInputMode="adjustPan" />
+
+        <!--品牌列表获取-->
+        <activity
+            android:name=".module.product.BrandListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
