--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cdkj.myxb">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
@@ -117,6 +119,14 @@
             android:name=".module.product.BrandListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+
+        <!--下单-->
+        <activity
+            android:name=".module.product.ProductOrderActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
+
 
 
     </application>
