--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,13 +93,13 @@
 
         <!--我的积分订单-->
         <activity
-            android:name=".module.order.integral.MyIntegralOrderActivity"
+            android:name=".module.integral.order.MyIntegralOrderActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
         <!--积分订单详情-->
         <activity
-            android:name=".module.order.integral.IntegralOrderDetailsActivity"
+            android:name=".module.integral.order.IntegralOrderDetailsActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <!--积分订单评价-->
@@ -109,7 +109,7 @@
             android:windowSoftInputMode="adjustPan" />
         <!--积分订单确认收获-->
         <activity
-            android:name=".module.order.integral.IntegralOrderSureGetActivitty"
+            android:name=".module.integral.order.IntegralOrderSureGetActivitty"
             android:screenOrientation="portrait"
             android:theme="@style/ActivityDialogStyleBottom"
             android:windowSoftInputMode="adjustPan" />
@@ -123,6 +123,12 @@
         <!--下单-->
         <activity
             android:name=".module.product.ProductOrderActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
+        <!--订单详情-->
+        <activity
+            android:name=".module.order.OrderDetailsActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
