--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,17 +35,17 @@
             android:windowSoftInputMode="adjustPan" />
         <!--美导预约-->
         <activity
-            android:name=".module.shopper.ShopperAppointmentListActivity"
+            android:name=".module.appointment.CommonAppointmentListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <!--美导预约-->
         <activity
-            android:name=".module.shopper.ShopperAppointmentActivity"
+            android:name=".module.appointment.CommonAppointmentUserDetailActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <!--美导预约-->
         <activity
-            android:name=".module.shopper.ShopperAppointmentOrderActivity"
+            android:name=".module.appointment.CommonAppointmentOrderActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <!--产品详情-->
@@ -180,6 +180,11 @@
         <!--预约详情-->
         <activity
             android:name=".module.appointment.AppointmentDetailActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+        <!--预约搜索-->
+        <activity
+            android:name=".module.appointment.AppointmentSearchActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
