--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -197,6 +197,16 @@
             android:name=".module.user.UserInfoUpdateActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
+        <!--行程列表-->
+        <activity
+            android:name=".module.user.TripListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+       <!--行程列表-->
+        <activity
+            android:name=".module.user.ExpertRankListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
 
 
     </application>
