--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -202,9 +202,15 @@
             android:name=".module.user.TripListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-       <!--行程列表-->
+        <!--行程列表-->
         <activity
             android:name=".module.user.ExpertRankListActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
+        <!--我的评论-->
+        <activity
+            android:name=".module.user.MyCommentsAllActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
