--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -214,7 +214,12 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
 
-
+        <!--用户头像选择-->
+        <activity
+            android:name=".module.user.LogoSelectActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/ActivityDialogStyleBottom"
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
