新增 品牌排名 专家排名 美容院排名

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -233,7 +233,7 @@
 
         <!--喜报详情-->
         <activity
-            android:name=".module.banner.RankListActivity"
+            android:name=".module.banner.AllRankListActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
     </application>
