--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     api project(':cdcommon')
-
+    // 二维码
+    implementation 'cn.yipianfengye.android:zxing-library:2.2'
     //路由
     //arouter
 
